--- a/app/views/subtopic.html
+++ b/app/views/subtopic.html
@@ -76,7 +76,7 @@
           </div>
            <dir-disqus disqus-shortname="idpflow"
                 disqus-identifier="{{subTopic.id}}"
-                disqus-url="{{subTopic.id}}">
+                disqus-url="http://glacial-meadow-3111.herokuapp.com/#!/subtopic/{{subTopic.id}}">
               </dir-disqus>
       </div>
       <div class="col-sm-4" id="right-sidebar">
