--- a/app/views/subtopic.html
+++ b/app/views/subtopic.html
@@ -15,16 +15,16 @@
           <span href="#" class="list-group-item active">
             <h5 data-ng-cloak>{{subTopic.name}}</h5>
           </span>
-          <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}">
+          <a class="list-group-item" data-ng-href="#!/subject/{{subject.id}}">
             <i class="fa fa-mortar-board"></i> Lectures <span class="badge" ng-model="numberOfSubTopics" data-ng-bind="numberOfSubTopics()"></span>
           </a>
-          <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}/quizzes">
+          <a class="list-group-item" data-ng-href="#!/subject/{{subject.id}}/quizzes">
             <i class="fa fa-question"></i> Quizzes <span class="badge" data-ng-model="numberOfQuizzes" data-ng-bind="numberOfQuizzes()"></span>
           </a>
           <a data-ng-href="/#!/subject/{{subject.id}}" class="list-group-item">
             <i class="fa fa-long-arrow-left"></i> {{subject.name}}
           </a>
-          <a data-ng-if="getOngoingQuizId() != ''" data-ng-href="/#/quiz/{{getOngoingQuizId()}}" class="list-group-item">
+          <a data-ng-if="getOngoingQuizId() != ''" data-ng-href="/#!/quiz/{{getOngoingQuizId()}}" class="list-group-item">
             <i class="fa fa-long-arrow-left"></i> Back to Last Ongoing Quiz
           </a>
         </div>        
